# Tetris-game

./: .gitignore  CMakeLists.txt  Field.cpp  Field.h  Figure.cpp  Figure.h  Game.cpp  Game.h  Tetris.cpp  Tetris.sln  Tetris.vcxproj  тетрис.cpp  тетрис.sln  тетрис.vcxproj
